# Space-Effects-AI

./: .gitignore  CMakeLists.txt  DelegateUtils.py  InstallationTfLiteReadme.md  Readme Installation.md  Readme Prerequisites.md  Readme.md  delegates_set.py  workbench_efficientnet.py  workbench_set_loop.py  workbench_set_simple.py
src/: ConvOps.h  DelegateCore.cpp  Logger.cpp
